[package]
name = "tmp-stream"
version = "0.1.0"
authors = ["Lukas Lindqvist <lukas@0x7b2.net>"]
license = "GPL-3.0"
readme = "README.md"
edition = "2018"

[dependencies]
actix-web = "3"
actix-rt = "1"
actix-cors = "0.5"
rand = "0.8"
serde_derive = "1.0"
serde = "1.0"
redis = { version = "0.20.0", features = ["async-std-comp"] }
async-std = "1.9.0"
deadpool-redis = "0.7.1"
envy = "0.4"